tests/paczka1/fuzzy1/39202768.err
Error in line 9: zqfQxKy S892 99,89
Error in line 10: 0ga6OB S266 35,2
Error in line 30: PeoVlY6 S892 78,0
Error in line 26: AxeFOJ7tP A79 162,2
Error in line 21: zqfQxKy S892 281,7
Error in line 37: bx3H S892 73,3
